# art

./: .gitmodules  CMakeLists.txt  art.ixx  premake5.lua
art_canvas/: CMakeLists.txt
art_canvas/src/: canvas.cpp  canvas.cppm  canvas.ixx
art_core/: CMakeLists.txt
art_core/src/: core.cppm  core.ixx  default_init.ixx  types.ixx  util.ixx
art_core/src/gallery/: gallery.cpp  gallery.cppm  gallery.ixx
art_core/src/log/: log.cpp  log.cppm  log.ixx
art_extern/: CMakeLists.txt
art_extern/src/: extern.cpp  extern.cppm  extern.ixx
art_paint/: CMakeLists.txt
art_paint/src/: painter.cpp  painter.cppm  painter.ixx
core/: CMakeLists.txt  core.cppm  core.ixx  premake5.lua
src/: art.cppm  art.ixx
